--- a/p1/config1.cnf
+++ b/p1/config1.cnf
@@ -6,7 +6,7 @@ Quantum Time (cycles): 55
 Memory Available (KB): 667
 Processor Cycle Time (msec): 10
 I/O Cycle Time (msec): 20
-Log To: Monitor
+Log To: File
 Log File Path: logfile_1.lgf
 End Simulator Configuration File.
 
